ポート番号修整

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "dependencies": {
     "discord.js": "latest",
-    "nedb": "latest"
+    "nedb": "latest",
+    "mongodb": "latest"
   },
   "devDependencies": {},
   "scripts": {
