--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,9 +6,6 @@ name: Node.js CI
 on:
   push:
     branches: [ develop ]
-  pull_request:
-    branches: [ master ]
-
 jobs:
   build:
 
@@ -26,4 +23,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - run: npm run build --if-present
+    - run: export ${DISCORD_BOT_TOKEN}
     - run: npm start
