--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Observe Discord Voice Channel",
   "main": "main.js",
   "dependencies": {
-    "discord.js": "latest",
-    "nedb": "latest",
-    "mongodb": "latest"
+    "discord.js": "^12.2.0",
+    "dotenv": "^8.2.0",
+    "mongodb": "^3.5.8",
+    "nedb": "^1.8.0"
   },
   "scripts": {
     "start": "node main.js",
