transplant nedb to mongoDB

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "dependencies": {
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
-    "mongodb": "^3.5.8",
-    "nedb": "^1.8.0"
+    "mongodb": "^3.5.8"
   },
   "scripts": {
     "start": "node main.js",
