--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,4 +23,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - run: npm run build --if-present
-    - run: npm start
+    - run: |
+        touch .env
+        echo DISCORD_BOT_TOKEN =${{ secrets.DISCORD_BOT_TOKEN }} >> .env
+        echo MONGODB_URI =${{ secrets.MONGODB_URI }} >> .env
+        cat .env
+        npm start
