--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,8 +23,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - run: npm run build --if-present
-    - run: |
-        touch .env
+    - run:
+        # touch .env
         echo DISCORD_BOT_TOKEN =${{ secrets.DISCORD_BOT_TOKEN }} >> .env
         echo MONGODB_URI =${{ secrets.MONGODB_URI }} >> .env
         npm start
