--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,7 +5,7 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ develop ]
 jobs:
   build:
 
@@ -24,7 +24,6 @@ jobs:
     - run: npm install
     - run: npm run build --if-present
     - run: |
-        # touch .env
         echo DISCORD_BOT_TOKEN =${{ secrets.DISCORD_BOT_TOKEN }} >> .env
         echo MONGODB_URI =${{ secrets.MONGODB_URI }} >> .env
         npm start
